bootstrap/tests/errors/syntax_error.bmb
// Error test: Syntax error
// Expected error: Parser error
fn main() -> i64 = 1 +;
